@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "org.openapi.generator" version "5.0.0"
+    id "org.beryx.runtime" version "1.12.1"
 }
 
 group "ru.craftysoft"
@@ -54,6 +55,18 @@ task generateRestApiWrap() {
         }
         generateRestApi.doWork()
     }
+}
+
+runtime {
+    addOptions("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages")
+    addModules("java.naming", "java.xml")
+    launcher {
+        jvmArgs = ["--enable-preview"]
+    }
+}
+
+application {
+    mainClassName = "ru.craftysoft.demoservice.Application"
 }
 
 sourceSets.main.java {
